--- a/index.html
+++ b/index.html
@@ -17,26 +17,6 @@
             <div class="manager_size">Размер:</div>
         </div>
         <div class="manager">
-            <div class="row row_item">
-                <div class="manager_item" data-name="Item 1">Item 1</div>
-                <div class="manager_size">34564</div>
-            </div>
-            <div class="row row_item">
-                <div class="manager_item" data-name="Item 1">Item 1</div>
-                <div class="manager_size">34564</div>
-            </div>
-            <div class="row row_item">
-                <div class="manager_item" data-name="Item 1">Item 1</div>
-                <div class="manager_size">34564</div>
-            </div>
-            <div class="row row_item">
-                <div class="manager_item" data-name="Item 1">Item 1</div>
-                <div class="manager_size">34564</div>
-            </div>
-            <div class="row row_item">
-                <div class="manager_item" data-name="Item 1">Item 1</div>
-                <div class="manager_size">34564</div>
-            </div>
 
         </div>
     </div>
@@ -44,6 +24,7 @@
     <div class="hide context_menu shadow">
         <ul class="ul_menu">
             <li><a href="/">Открыть</a></li>
+            <li><a href="/">Загрузить</a></li>
             <li><a href="/">Копировать</a></li>
             <li><a href="/">Вырезать</a></li>
             <li><a href="/">Вставить</a></li>
