--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container shadow">
         <div class="row row-name">
             <div class="manager_item">Название:</div>
         </div>
