--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="container shadow">
         <div class="row row-name">
             <div class="manager_item">Название:</div>
+            <div class="manager_item"><input class="dark" type="checkbox"><span class="dark-text">Темная тема</span></div>
         </div>
         <div class="manager">
 
